modification du html de la page backstage selon le correcteur

--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="fr">
-  <!---HEAD--->
+  <!--HEAD-->
   <head>
       <meta charset="UTF-8" />
       <link rel="stylesheet" type="text/css" href="../styles/style.scss" >
@@ -10,10 +10,10 @@
 
       <title>Tabas'KHO</title>
   </head>
-  <!---BODY--->
+  <!--BODY-->
   <body id="body_backstage">
 
-    <!---barre de navigation entre les pages--->
+    <!--barre de navigation entre les pages-->
     <nav class="navbar">
       <a href="/">
         <svg
@@ -72,7 +72,7 @@
 
     </nav>
 
-    <!---HEADER--->
+    <!--HEADER-->
     <header>
       <div>
         <svg width="424" height="114" viewBox="0 0 424 114" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -89,9 +89,9 @@
       </div>
     </header>
     <hr>
-    <!---MAIN--->
+    <!--MAIN-->
     <main>
-      <!---1er article--->
+      <!--1er article-->
       <article class="articleClair">
         <p class="datePublication">12 février 2089</p>
         <h2>Titre 1</h2>
@@ -107,9 +107,9 @@
         </details>
       </article>
       <hr>
-      <!---les 2 articles côte à côte--->
+      <!--les 2 articles côte à côte-->
       <div>
-        <!---2e article--->
+        <!--2e article-->
         <article class="articleSombre">
           <p class="datePublication">12 février 2089</p>
           <h2>Titre 2</h2>
@@ -128,7 +128,7 @@
           </details>
         </article>
         <hr>
-        <!---3e article--->
+        <!--3e article-->
         <article class="articleSombre img_gauche decalage_a_droite">
           <p class="datePublication">12 février 2089</p>
           <h2>Titre 3</h2>
@@ -148,7 +148,7 @@
         </article>
       </div>
       <hr>
-      <!---4e article--->
+      <!--4e article-->
       <article class="articleClair">
         <p class="datePublication">12 février 2089</p>
         <h2>Titre 4</h2>
@@ -164,7 +164,7 @@
         </details>
       </article>
       <hr>
-      <!---5e article--->
+      <!--5e article-->
       <article class="articleSombre">
         <p class="datePublication">12 février 2089</p>
         <h2>Titre 5</h2>
@@ -180,14 +180,12 @@
         </details>
       </article>
     </main>
-    <!---FOOTER--->
+    <!--FOOTER-->
     <footer>
       <div>
+        <!-- liens pratiques -->
         <div>
-
-          <!-- Logo tabas'KHO -->
           <div>
-            <a href="/">
             <svg
               width="30"
               height="27"
@@ -222,31 +220,29 @@
                 fill="#C58AEE"
               />
             </svg>
-            </a>
 
             <p>Tabas'<strong>KHO</strong></p>
           </div>
 
           <article>
             <p class="text-lead">Liens utiles</p>
-            <a href="\">Séries phares</a>
-            <a href="\">Critiques récentes</a>
-            <a href="\">Toutes les séries</a>
+            <p>Séries phare</p>
+            <p>Critiques récentes</p>
+            <p>Toutes les séries</p>
           </article>
 
           <article>
             <p class="text-lead">Infos</p>
-            <a href="\">A propos</a>
-            <a href="\">Conditions d'utilisation</a>
-            <a href="\">Confidentialité</a>
+            <p>Séries phare</p>
+            <p>Critiques récentes</p>
+            <p>Toutes les séries</p>
           </article>
         </div>
 
         <!-- Div des réseaux sociaux -->
         <div>
 
-          <!-- twitter -->
-          <a href="https://twitter.com/" target="_blank">
+          <a>
             <svg
               width="20"
               height="18"
@@ -269,8 +265,7 @@
             </svg>
           </a>
 
-          <!-- insta -->
-          <a href="https://www.instagram.com/" target="_blank">
+          <a>
             <svg
               width="20"
               height="20"
@@ -285,8 +280,7 @@
             </svg>
           </a>
 
-          <!-- snapchat -->
-          <a href="https://accounts.snapchat.com/" target="_blank">
+          <a>
             <svg
               width="20"
               height="20"
@@ -304,7 +298,7 @@
           </a>
         </div>
 
-        <p>@2023 Tabs'KHO, Tous droits réservés</p>
+        <p>@2023 Tabas'KHO, Tous droit réservé</p>
       </div>
     </footer>
 
