modification du html de la page backstage selon le correcteur version 2

--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -228,16 +228,16 @@
 
               <article>
                   <p class="text-lead">Liens utiles</p>
-                  <a href="\">Séries phares</a>
-                  <a href="\">Critiques récentes</a>
-                  <a href="\">Toutes les séries</a>
+                  <a href="/">Séries phares</a>
+                  <a href="/">Critiques récentes</a>
+                  <a href="/">Toutes les séries</a>
               </article>
 
               <article>
                   <p class="text-lead">Infos</p>
-                  <a href="\">A propos</a>
-                  <a href="\">Conditions d'utilisation</a>
-                  <a href="\">Confidentialité</a>
+                  <a href="/">A propos</a>
+                  <a href="/">Conditions d'utilisation</a>
+                  <a href="/">Confidentialité</a>
               </article>
           </div>
 
