màj des footers poru tt le monde

--- a/index.html
+++ b/index.html
@@ -377,13 +377,13 @@
       </div>
     </section>
 
-    <!-- Footer -->
+    <!-- FOOTER -->
     <footer>
       <div>
-        <!-- liens pratiques -->
         <div>
-          <div>
 
+          <!-- Logo tabas'KHO -->
+          <div>
             <a href="/">
             <svg
               width="30"
@@ -425,17 +425,17 @@
           </div>
 
           <article>
-            <h3 class="text-lead">Liens utiles</h3>
-            <a>Séries phares</a>
-            <a>Critiques récentes</a>
-            <a>Toutes les séries</a>
+            <h4 class="text-lead">Liens utiles</h4>
+            <a href="/">Séries phares</a>
+            <a href="/">Critiques récentes</a>
+            <a href="/">Toutes les séries</a>
           </article>
 
           <article>
-            <h3 class="text-lead">Infos</h3>
-            <a>A propos</a>
-            <a>Conditions d'utilisation</a>
-            <a>Confidentialité</a>
+            <h4 class="text-lead">Infos</h4>
+            <a href="/">A propos</a>
+            <a href="/">Conditions d'utilisation</a>
+            <a href="/">Confidentialité</a>
           </article>
         </div>
 
