--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -181,7 +181,7 @@
       </article>
     </main>
     
-    <!---FOOTER--->
+    <!-- FOOTER -->
     <footer>
       <div>
         <div>
@@ -229,17 +229,17 @@
           </div>
 
           <article>
-            <p class="text-lead">Liens utiles</p>
-            <a href="\">Séries phares</a>
-            <a href="\">Critiques récentes</a>
-            <a href="\">Toutes les séries</a>
+            <h4 class="text-lead">Liens utiles</h4>
+            <a href="/">Séries phares</a>
+            <a href="/">Critiques récentes</a>
+            <a href="/">Toutes les séries</a>
           </article>
 
           <article>
-            <p class="text-lead">Infos</p>
-            <a href="\">A propos</a>
-            <a href="\">Conditions d'utilisation</a>
-            <a href="\">Confidentialité</a>
+            <h4 class="text-lead">Infos</h4>
+            <a href="/">A propos</a>
+            <a href="/">Conditions d'utilisation</a>
+            <a href="/">Confidentialité</a>
           </article>
         </div>
 
