fixation de tous les problèmes rencontré lors du build

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="./public/svg/logo.svg">
+    <link rel="icon" type="image/svg+xml" href="svg/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabas'KHO</title>
 
@@ -152,13 +152,13 @@
 
           <span class="sep"></span>
 
-          <img src="./public/images/icon-age-limit.png" alt="Pictogramme age limite">
+          <img src="images/icon-age-limit.png" alt="Pictogramme age limite">
         </div>
       </div>
 
       <span class="glow"></span>
 
-      <img class="background" src="./public/images/header-background.png" alt="Affiche de Black Mirror">
+      <img class="background" src="images/header-background.png" alt="Affiche de Black Mirror">
     </header>
 
     <!-- Actors section -->
@@ -177,8 +177,8 @@
         <div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actors/john-hamm.png" alt="Image d'acteur">
-              <img src="./public/actors/john-hamm.png" alt="Image d'acteur">
+              <img src="actors/john-hamm.png" alt="Image d'acteur">
+              <img src="actors/john-hamm.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -194,8 +194,8 @@
           </div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actors/daniel-kaluuya.png" alt="Image d'acteur">
-              <img src="./public/actors/daniel-kaluuya.png" alt="Image d'acteur">
+              <img src="actors/daniel-kaluuya.png" alt="Image d'acteur">
+              <img src="actors/daniel-kaluuya.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -214,8 +214,8 @@
         <div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actors/bryce-dallas-howard.png" alt="Image d'acteur">
-              <img src="./public/actors/bryce-dallas-howard.png" alt="Image d'acteur">
+              <img src="actors/bryce-dallas-howard.png" alt="Image d'acteur">
+              <img src="actors/bryce-dallas-howard.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -231,8 +231,8 @@
           </div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actors/hayley-atwell.png" alt="Image d'acteur">
-              <img src="./public/actors/hayley-atwell.png" alt="Image d'acteur">
+              <img src="actors/hayley-atwell.png" alt="Image d'acteur">
+              <img src="actors/hayley-atwell.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -248,8 +248,8 @@
           </div>
           <div class="actor-card">
             <div class="images-container">
-              <img src="./public/actors/domhnall-gleeson.png" alt="Image d'acteur">
-              <img src="./public/actors/domhnall-gleeson.png" alt="Image d'acteur">
+              <img src="actors/domhnall-gleeson.png" alt="Image d'acteur">
+              <img src="actors/domhnall-gleeson.png" alt="Image d'acteur">
             </div>
 
             <div class="hover-overlay">
@@ -284,7 +284,7 @@
         <div class="price-wrapper">
           <div>
             <div>
-              <img src="public/prices/bafta-tv-awards.png" alt="Bafta price">
+              <img src="/prices/bafta-tv-awards.png" alt="Bafta price">
               <div>
                 <h3>2012</h3>
                 <p>BAFTA TV Awards</p>
@@ -295,7 +295,7 @@
 
           <div>
             <div>
-              <img src="public/prices/satelite-award.png" alt="Bafta price">
+              <img src="/prices/satelite-award.png" alt="Bafta price">
               <div>
                 <h3>2013</h3>
                 <p>Satellite Awards</p>
@@ -306,7 +306,7 @@
 
           <div>
             <div>
-              <img src="public/prices/producers-guild-of-america-awards.png" alt="Bafta price">
+              <img src="/prices/producers-guild-of-america-awards.png" alt="Bafta price">
               <div>
                 <h3>2016</h3>
                 <p>Producers Guild of America Awards</p>
@@ -317,7 +317,7 @@
 
           <div>
             <div>
-              <img src="public/prices/emmy-awards.png" alt="Bafta price">
+              <img src="/prices/emmy-awards.png" alt="Bafta price">
               <div>
                 <h3>2017</h3>
                 <p>Emmy Awards</p>
@@ -342,36 +342,36 @@
           <div class="swiper-slide">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam dolor facere in laboriosam laborum maxime nisi possimus quis reiciendis. Commodi distinctio eveniet, iste minus quasi quos sapiente suscipit voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consequatur deserunt dolorum eos esse expedita illo iusto, molestias nostrum numquam, officiis possimus qui sed sequi sit tempora ullam voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut blanditiis, esse excepturi harum impedit in, labore libero minus necessitatibus optio pariatur provident quod ratione recusandae, repellat reprehenderit sapiente voluptatem voluptatibus?</p>
             <div>
-              <img src="public/media/telerama.png" alt="Logo telerama">
+              <img src="/media/telerama.png" alt="Logo telerama">
               <div class="stars">
-                <img src="public/svg/star.svg" alt="star">
-                <img src="public/svg/star.svg" alt="star">
-                <img src="public/svg/star.svg" alt="star">
-                <img src="public/svg/star-unfill.svg" alt="star">
-                <img src="public/svg/star-unfill.svg" alt="star">
+                <img src="/svg/star.svg" alt="star">
+                <img src="/svg/star.svg" alt="star">
+                <img src="/svg/star.svg" alt="star">
+                <img src="/svg/star-unfill.svg" alt="star">
+                <img src="/svg/star-unfill.svg" alt="star">
               </div>
             </div>
           </div>
           <div class="swiper-slide">
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A aliquam dolor facere in laboriosam laborum maxime nisi possimus quis reiciendis. Commodi distinctio eveniet, iste minus quasi quos sapiente suscipit voluptatibus? Lorem ipsum dolor sit amet, consectetur adipisicing elit. At beatae consequatur deserunt dolorum eos esse expedita illo iusto, molestias nostrum numquam.</p>
             <div>
-              <img src="public/media/alo-cine.png" alt="Logo alo cine">
+              <img src="/media/alo-cine.png" alt="Logo alo cine">
               <div class="stars">
-                <img src="public/svg/star.svg" alt="star">
-                <img src="public/svg/star.svg" alt="star">
-                <img src="public/svg/star-unfill.svg" alt="star">
-                <img src="public/svg/star-unfill.svg" alt="star">
-                <img src="public/svg/star-unfill.svg" alt="star">
+                <img src="/svg/star.svg" alt="star">
+                <img src="/svg/star.svg" alt="star">
+                <img src="/svg/star-unfill.svg" alt="star">
+                <img src="/svg/star-unfill.svg" alt="star">
+                <img src="/svg/star-unfill.svg" alt="star">
               </div>
             </div>
           </div>
         </div>
         <div class="swiper-button-prev">
-          <img src="public/svg/caret-left.svg" alt="Caret">
+          <img src="/svg/caret-left.svg" alt="Caret">
 
         </div>
         <div class="swiper-button-next">
-          <img src="public/svg/caret-left.svg" alt="Caret">
+          <img src="/svg/caret-left.svg" alt="Caret">
         </div>
 
       </div>
