--- a/pages/critique.html
+++ b/pages/critique.html
@@ -7,8 +7,8 @@
 
       <title>Critique</title>
 
-      <link rel="icon" type="image/svg+xml" href="../public/images/logo.png" />
-      <link rel="stylesheet" type="text/css" href="../styles/style.scss">
+      <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
+      <link rel="stylesheet" type="text/css" href="/styles/style.scss">
   </head>
 
   <body id="body_page_critique">
@@ -92,8 +92,8 @@
       <div class="filtre2">
 
         <div>
-          <a href="../index.html" class="button primary">
-            <img src="../public/svg/back-arrow.svg" alt="flèche retour">
+          <a href="/index.html" class="button primary">
+            <img src="/svg/back-arrow.svg" alt="flèche retour">
             <p>Acceuil</p>
           </a>
 
@@ -115,11 +115,11 @@
         <!-- Zone des boutons (Presse/public) -->
         <article class="filtre1">
           <a href="" class="button primary">
-            <img src="../public/svg/presse.svg">
+            <img src="/svg/presse.svg">
             <p>Presse</p>
           </a>
           <a href="" class="button primary">
-            <img src="../public/svg/personne.svg">
+            <img src="/svg/personne.svg">
             <p>Public</p>
           </a>
         </article>
@@ -132,7 +132,7 @@
               <div>
                   <p class="text-lead">Jhonny Ipsum</p>
                   <figure>
-                    <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
+                    <img src="/images/image_test.jpg" class="shine-image" width="700"/>
                     <figcaption>
                       <p>S1E3</p>
                       <p>Il y a 2 mois</p>
@@ -190,7 +190,7 @@
             <div>
                 <p class="text-lead">Jhonny Ipsum</p>
                 <figure>
-                    <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
+                    <img src="/images/image_test.jpg" class="shine-image" width="700"/>
                     <figcaption><p>S3E1</p> <p>Il y a 4 mois</p></figcaption>
                 </figure>
             </div>
@@ -245,7 +245,7 @@
               <div>
                   <p class="text-lead">Jhonny Ipsum</p>
                   <figure>
-                    <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
+                    <img src="/images/image_test.jpg" class="shine-image" width="700"/>
                     <figcaption>
                       <p>S1E3</p>
                       <p>Il y a 2 mois</p>
@@ -303,7 +303,7 @@
             <div>
                 <p class="text-lead">Jhonny Ipsum</p>
                 <figure>
-                    <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
+                    <img src="/images/image_test.jpg" class="shine-image" width="700"/>
                     <figcaption><p>S3E1</p> <p>Il y a 4 mois</p></figcaption>
                 </figure>
             </div>
@@ -358,7 +358,7 @@
               <div>
                   <p class="text-lead">Jhonny Ipsum</p>
                   <figure>
-                    <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
+                    <img src="/images/image_test.jpg" class="shine-image" width="700"/>
                     <figcaption>
                       <p>S1E3</p>
                       <p>Il y a 2 mois</p>
@@ -416,7 +416,7 @@
             <div>
                 <p class="text-lead">Jhonny Ipsum</p>
                 <figure>
-                    <img src="../data/images/image_test.jpg" class="shine-image" width="700"/>
+                    <img src="/images/image_test.jpg" class="shine-image" width="700"/>
                     <figcaption><p>S3E1</p> <p>Il y a 4 mois</p></figcaption>
                 </figure>
             </div>
