--- a/pages/saisons.html
+++ b/pages/saisons.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" type="image/svg+xml" href="../public/images/logo.png">
+    <link rel="icon" type="image/svg+xml" href="/images/logo.png">
     <link rel="stylesheet" href="../styles/style.scss" type="text/css">
 
     <title>Présentation de toutes les saisons</title>
@@ -94,14 +94,14 @@
 
           <span class="sep"></span>
 
-          <img src="../public/images/icon-age-limit.png" alt="Pictogramme age limite">
+          <img src="/images/icon-age-limit.png" alt="Pictogramme age limite">
         </div>
       </div>
 
       <span class="glow"></span>
 
       <video autoplay loop muted class="background">
-        <source src="../public/video/bande_annonce.mp4">
+        <source src="/video/bande_annonce.mp4">
       </video>
     </header>
 
@@ -121,7 +121,7 @@
 
             <div>
               <a href="https://www.youtube.com/watch?v=zLZHdK6l55I" target="_blank">
-                <img src="../public/images/s1.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
+                <img src="/images/s1.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
 
                 <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 20.9365C0 15.6322 2.10714 10.5451 5.85786 6.79439C9.60859 3.04366 14.6957 0.936523 20 0.936523C25.3043 0.936523 30.3914 3.04366 34.1421 6.79439C37.8929 10.5451 40 15.6322 40 20.9365C40 26.2409 37.8929 31.3279 34.1421 35.0787C30.3914 38.8294 25.3043 40.9365 20 40.9365C14.6957 40.9365 9.60859 38.8294 5.85786 35.0787C2.10714 31.3279 0 26.2409 0 20.9365ZM14.7109 12.4287C14.1172 12.7568 13.75 13.3896 13.75 14.0615V27.8115C13.75 28.4912 14.1172 29.1162 14.7109 29.4443C15.3047 29.7725 16.0234 29.7646 16.6094 29.4053L27.8594 22.5303C28.4141 22.1865 28.7578 21.585 28.7578 20.9287C28.7578 20.2725 28.4141 19.6709 27.8594 19.3271L16.6094 12.4521C16.0312 12.1006 15.3047 12.085 14.7109 12.4131V12.4287Z" fill="#F6EEEE"/>
@@ -262,7 +262,7 @@
 
             <div>
               <a href="https://www.youtube.com/watch?v=bfOB7a3ab5M" target="_blank">
-                <img src="../public/images/s2.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
+                <img src="/images/s2.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
 
                 <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 20.9365C0 15.6322 2.10714 10.5451 5.85786 6.79439C9.60859 3.04366 14.6957 0.936523 20 0.936523C25.3043 0.936523 30.3914 3.04366 34.1421 6.79439C37.8929 10.5451 40 15.6322 40 20.9365C40 26.2409 37.8929 31.3279 34.1421 35.0787C30.3914 38.8294 25.3043 40.9365 20 40.9365C14.6957 40.9365 9.60859 38.8294 5.85786 35.0787C2.10714 31.3279 0 26.2409 0 20.9365ZM14.7109 12.4287C14.1172 12.7568 13.75 13.3896 13.75 14.0615V27.8115C13.75 28.4912 14.1172 29.1162 14.7109 29.4443C15.3047 29.7725 16.0234 29.7646 16.6094 29.4053L27.8594 22.5303C28.4141 22.1865 28.7578 21.585 28.7578 20.9287C28.7578 20.2725 28.4141 19.6709 27.8594 19.3271L16.6094 12.4521C16.0312 12.1006 15.3047 12.085 14.7109 12.4131V12.4287Z" fill="#F6EEEE"/>
@@ -396,7 +396,7 @@
                         
             <div>
               <a href="https://www.youtube.com/watch?v=bRhzOefxrQ4" target="_blank">
-                <img src="../public/images/s3.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
+                <img src="/images/s3.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
 
                 <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 20.9365C0 15.6322 2.10714 10.5451 5.85786 6.79439C9.60859 3.04366 14.6957 0.936523 20 0.936523C25.3043 0.936523 30.3914 3.04366 34.1421 6.79439C37.8929 10.5451 40 15.6322 40 20.9365C40 26.2409 37.8929 31.3279 34.1421 35.0787C30.3914 38.8294 25.3043 40.9365 20 40.9365C14.6957 40.9365 9.60859 38.8294 5.85786 35.0787C2.10714 31.3279 0 26.2409 0 20.9365ZM14.7109 12.4287C14.1172 12.7568 13.75 13.3896 13.75 14.0615V27.8115C13.75 28.4912 14.1172 29.1162 14.7109 29.4443C15.3047 29.7725 16.0234 29.7646 16.6094 29.4053L27.8594 22.5303C28.4141 22.1865 28.7578 21.585 28.7578 20.9287C28.7578 20.2725 28.4141 19.6709 27.8594 19.3271L16.6094 12.4521C16.0312 12.1006 15.3047 12.085 14.7109 12.4131V12.4287Z" fill="#F6EEEE"/>
@@ -530,7 +530,7 @@
 
             <div>
               <a href="https://youtu.be/UxKUxwEF364" target="_blank">
-                <img src="../public/images/s4.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
+                <img src="/images/s4.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
 
                 <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 20.9365C0 15.6322 2.10714 10.5451 5.85786 6.79439C9.60859 3.04366 14.6957 0.936523 20 0.936523C25.3043 0.936523 30.3914 3.04366 34.1421 6.79439C37.8929 10.5451 40 15.6322 40 20.9365C40 26.2409 37.8929 31.3279 34.1421 35.0787C30.3914 38.8294 25.3043 40.9365 20 40.9365C14.6957 40.9365 9.60859 38.8294 5.85786 35.0787C2.10714 31.3279 0 26.2409 0 20.9365ZM14.7109 12.4287C14.1172 12.7568 13.75 13.3896 13.75 14.0615V27.8115C13.75 28.4912 14.1172 29.1162 14.7109 29.4443C15.3047 29.7725 16.0234 29.7646 16.6094 29.4053L27.8594 22.5303C28.4141 22.1865 28.7578 21.585 28.7578 20.9287C28.7578 20.2725 28.4141 19.6709 27.8594 19.3271L16.6094 12.4521C16.0312 12.1006 15.3047 12.085 14.7109 12.4131V12.4287Z" fill="#F6EEEE"/>
@@ -664,7 +664,7 @@
 
             <div>
               <a href="https://youtu.be/KVXESsqzc34" target="_blank">
-                <img src="../public/images/s5.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
+                <img src="/images/s5.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
 
                 <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 20.9365C0 15.6322 2.10714 10.5451 5.85786 6.79439C9.60859 3.04366 14.6957 0.936523 20 0.936523C25.3043 0.936523 30.3914 3.04366 34.1421 6.79439C37.8929 10.5451 40 15.6322 40 20.9365C40 26.2409 37.8929 31.3279 34.1421 35.0787C30.3914 38.8294 25.3043 40.9365 20 40.9365C14.6957 40.9365 9.60859 38.8294 5.85786 35.0787C2.10714 31.3279 0 26.2409 0 20.9365ZM14.7109 12.4287C14.1172 12.7568 13.75 13.3896 13.75 14.0615V27.8115C13.75 28.4912 14.1172 29.1162 14.7109 29.4443C15.3047 29.7725 16.0234 29.7646 16.6094 29.4053L27.8594 22.5303C28.4141 22.1865 28.7578 21.585 28.7578 20.9287C28.7578 20.2725 28.4141 19.6709 27.8594 19.3271L16.6094 12.4521C16.0312 12.1006 15.3047 12.085 14.7109 12.4131V12.4287Z" fill="#F6EEEE"/>
@@ -798,7 +798,7 @@
 
             <div>
               <a href="https://www.youtube.com/watch?v=36dAVjHT-r4" target="_blank">
-                <img src="../public/images/s6.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
+                <img src="/images/s6.jpg" class="shine-image" width="700" title="Voir la bande annonce sur YouTube">
 
                 <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M0 20.9365C0 15.6322 2.10714 10.5451 5.85786 6.79439C9.60859 3.04366 14.6957 0.936523 20 0.936523C25.3043 0.936523 30.3914 3.04366 34.1421 6.79439C37.8929 10.5451 40 15.6322 40 20.9365C40 26.2409 37.8929 31.3279 34.1421 35.0787C30.3914 38.8294 25.3043 40.9365 20 40.9365C14.6957 40.9365 9.60859 38.8294 5.85786 35.0787C2.10714 31.3279 0 26.2409 0 20.9365ZM14.7109 12.4287C14.1172 12.7568 13.75 13.3896 13.75 14.0615V27.8115C13.75 28.4912 14.1172 29.1162 14.7109 29.4443C15.3047 29.7725 16.0234 29.7646 16.6094 29.4053L27.8594 22.5303C28.4141 22.1865 28.7578 21.585 28.7578 20.9287C28.7578 20.2725 28.4141 19.6709 27.8594 19.3271L16.6094 12.4521C16.0312 12.1006 15.3047 12.085 14.7109 12.4131V12.4287Z" fill="#F6EEEE"/>
