dernier commit pour régler les derniers détails des saisons

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
           <article>
             <h4 class="text-lead">Liens utiles</h4>
             <a href="/">Séries phares</a>
-            <a href="/">Critiques récentes</a>
+            <a href="/pages/critique.html">Critiques récentes</a>
             <a href="/">Toutes les séries</a>
           </article>
 
