--- a/pages/backstage.html
+++ b/pages/backstage.html
@@ -231,7 +231,7 @@
           <article>
             <h4 class="text-lead">Liens utiles</h4>
             <a href="/">Séries phares</a>
-            <a href="/">Critiques récentes</a>
+            <a href="/pages/critique.html">Critiques récentes</a>
             <a href="/">Toutes les séries</a>
           </article>
 
@@ -309,7 +309,7 @@
       </div>
     </footer>
 
-    <script type="module" src="../js/saisons.js"></script>
+    <script type="module" src="../js/backstage.js"></script>
     <script type="module" src="../js/navbar.js"></script>
   </body>
 </html>
