--- a/pages/critique.html
+++ b/pages/critique.html
@@ -519,7 +519,7 @@
           <article>
             <h4 class="text-lead">Liens utiles</h4>
             <a href="/">Séries phares</a>
-            <a href="/">Critiques récentes</a>
+            <a href="/pages/critique.html">Critiques récentes</a>
             <a href="/">Toutes les séries</a>
           </article>
 
@@ -598,5 +598,6 @@
     </footer>
 
     <script type="module" src="../js/navbar.js"></script>
+    <script type="module" src="../js/critique.js"></script>
   </body>
 </html>
