--- a/pages/critique.html
+++ b/pages/critique.html
@@ -93,7 +93,7 @@
 
         <div>
           <a href="/index.html" class="button primary">
-            <img src="/svg/back-arrow.svg" alt="flèche retour">
+            <!-- <img src="/svg/back-arrow.svg" alt="flèche retour"> -->
             <p>Acceuil</p>
           </a>
 
@@ -113,17 +113,40 @@
       <div>
 
         <!-- Zone des boutons (Presse/public) -->
+      <header>
+        <div class="filtre2">
+
+          <div>
+            <a href="/index.html" class="button primary">
+              <!-- <img src="/svg/back-arrow.svg" alt="flèche retour"> -->
+              <p>Acceuil</p>
+            </a>
+  
+            <hr>
+            
+            <details class="button primary">
+              <summary>Filtres</summary>
+              <a href="" class="button primary">Par saison</a>
+              <a href="" class="button primary">Avis positifs</a>
+              <a href="" class="button primary">Avis négatifs</a>
+              <a href="" class="button primary">Utilisateur actif</a>
+              <a href="" class="button primary">Avis populaires</a>
+            </details>
+          </div>
+        </div>
+
         <article class="filtre1">
           <a href="" class="button primary">
-            <img src="/svg/presse.svg">
+            <!-- <img src="/svg/presse.svg"> -->
             <p>Presse</p>
           </a>
           <a href="" class="button primary">
-            <img src="/svg/personne.svg">
+            <!-- <img src="/svg/personne.svg"> -->
             <p>Public</p>
           </a>
         </article>
-
+      </header>
+        
 
 
         <section>
